<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/new_game_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_game_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <Spinner
                android:id="@+id/spinner_competition_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <Spinner
                android:id="@+id/spinner_team_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <Button
                android:id="@+id/btn_signup_date"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_selector"
                android:text="@string/signup_date"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_start_date"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_selector"
                android:text="@string/start_date"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_send"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@drawable/button_selector"
                android:text="@string/send"
                android:textColor="@color/mdtp_white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
