<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    tools:context="com.nutrica.client.nutrica.com.nutrica.client.Activities.SignupPlayer2">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="41" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="228"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="33" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="105"
            android:orientation="horizontal">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <ImageButton
                android:id="@+id/btn_avatar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="84"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/avatar" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33" />
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:background="@drawable/button_nine_patch_00"
            android:gravity="center_vertical|right"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="7dp"
            android:paddingRight="12dp"
            android:singleLine="true" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:background="@drawable/button_nine_patch_00">

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />
        </FrameLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:background="@drawable/button_nine_patch_00">

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />
        </FrameLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <EditText
            android:id="@+id/edt_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:background="@drawable/button_nine_patch_00"
            android:gravity="center_vertical|right"
            android:hint="@string/phonenumber"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="7dp"
            android:paddingRight="12dp"
            android:singleLine="true" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:background="@drawable/button_nine_patch_00">

            <Spinner
                android:id="@+id/spinner_favorite_game"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />
        </FrameLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <EditText
            android:id="@+id/edt_credit_card_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:background="@drawable/button_nine_patch_00"
            android:gravity="center_vertical|right"
            android:hint="@string/credit_card_number"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="7dp"
            android:paddingRight="12dp"
            android:singleLine="true" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="26" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_later"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="66"
                android:background="@drawable/button_nine_patch_00"
                android:text="@string/later"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="99" />

            <Button
                android:id="@+id/btn_sing_up"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="66"
                android:background="@drawable/button_nine_patch_01"
                android:text="@string/accept"
                android:textColor="@color/mdtp_white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50" />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="41" />

</LinearLayout>

